ejercicion individual - HTML etiquetas

--- a/index.html
+++ b/index.html
@@ -1,30 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre mí - Facundo Solé</title>
-</head>
-<body>
-  <h1>Facundo Solé</h1>
-  <img src="assets/facundo-sole.webp" alt="Facundo Solé" />
-  <article>
-    <p>Soy desarrollador web, estudiante de la carrera de Licenciatura en Gestión de Tecnologías de la Información. Antes de cambiar de industria, fui estudiante de la carrera de Contador Público en UADE.</p>
-    <p>Disfruto de programar, esencialmente me interesa todo el ecosistema del mundo Frontend. Actualmente estoy trabajando para una agencia de diseño y desarrollo llamada <a href="https://www.androbin.co/es" rel="noopener noreferrer" target="_blank">Robin</a> como Desarrollador Frontend. Tengo conocimiento sobre varias tecnologías, aquí una lista con algunas de ellas:</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Frameworks CSS como ChakraUI, TailwindCSS</li>
-      <li>JavaScript/Typescript</li>
-      <li>React</li>
-      <li>Node.js</li>
-      <li>Express</li>
-      <li>MySQL</li>
-      <li>Git/GitHub</li>
-      <li>Figma</li>
-    </ul>
-    <p>Siendo estudiante de la carrera de Contador Público, en 2020 me di cuenta que no era lo que me apasionaba, por lo que luego de un largo proceso de investigación, decidí comenzar a estudiar desarrollo web de manera autodidacta. Luego, me di cuenta que me motivaba a seguir aprendiendo, por lo que realicé la Diplomatura de Desarrollo Web Fullstack en UADE. Una vez realizada, comencé a preparar mi CV y mi <a href="https://www.facundosole.com.ar/" rel="noopener noreferrer" target="_blank">portfolio web</a> para buscar mi primer trabajo. 
-    Al percatarme de la competencia dentro de la industria, decidí que la mejor manera de destacar entre los demás y afianzar mis conocimientos era estudiar la Licenciatura en Gestión de Tecnologías de la Información</p> 
-  </article>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diseño y Desarrollo Web - Facundo Solé</title>
+  </head>
+  <body>
+    <main>
+      <h1>Diseño y Desarrollo Web</h1>
+      <section>
+        <h2>Bibliografía</h2>
+        <ul>
+          <li>
+            Obligatoria:
+            <ul>
+              <li>
+                Niederst Robbins, J. (2013). HTML5 pocket reference. O'Reilly.
+              </li>
+              <li>Meyer, E. A. (2018). CSS pocket reference. O'Reilly</li>
+              <li>Brown, E. (2016). Learning javascript. O'Reilly.</li>
+            </ul>
+          </li>
+          <li>
+            Complementaria:
+            <ul>
+              <li>Schulz, R. G. (2009). Diseño web con CSS. Alfaomega.</li>
+              <li>
+                Firtman, M. (2012). JQuery mobile: Aplicaciones HTML5 para
+                móviles. Anaya Multimedia.
+              </li>
+              <li>
+                Muñoz Carmona, J. (2021). Despliegue de aplicaciones web.
+                Síntesis.
+              </li>
+              <li>
+                Freeman, E., Robson, E., Sierra, K., & Bates, B. (2004). Head
+                First design patterns: a Brain-Friendly Guide. O'Reilly
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Fechas de exámenes</h2>
+        <ul>
+          <li>Primer examen parcial: <b>29/04/2025</b></li>
+          <li>Segundo examen parcial: <b>24/06/2025</b></li>
+          <li>
+            Examen recuperatorio - Examen final anticipado: <b>08/07/2025</b>
+          </li>
+          <li>Examen final regular: <b>22/07/2025</b></li>
+        </ul>
+      </section>
+      <section>
+        <h2>UVA 1</h2>
+        <ul>
+          <li>
+            <a
+              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571984/View" target="_blank"
+              >Cuestionario - Múltiple choice: Conceptos generales</a
+            >
+          </li>
+          <li>
+            <a href="https://facusole.github.io/desarrollo-web-uade/about-me" target="_blank"
+              >Ejercicio individual: HTML - Introducción</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571989/View" target="_blank"
+              >Cuestionario - Múltiple choice: Arquitectura</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571987/View" target="_blank"
+              >Ejercicio individual: HTML - Etiquetas
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
