ejercicion individual obligatorio - Ejercicio integrador

--- a/index.html
+++ b/index.html
@@ -6,80 +6,48 @@
     <title>Diseño y Desarrollo Web - Facundo Solé</title>
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="avisos.html">Avisos</a></li>
+        <li><a href="sobre-mi.html">Sobre mi</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="materias-2025.html">Materias 2025</a></li>
+      </ul>
+    </header>
     <main>
       <h1>Diseño y Desarrollo Web</h1>
-      <section>
-        <h2>Bibliografía</h2>
-        <ul>
-          <li>
-            Obligatoria:
-            <ul>
-              <li>
-                Niederst Robbins, J. (2013). HTML5 pocket reference. O'Reilly.
-              </li>
-              <li>Meyer, E. A. (2018). CSS pocket reference. O'Reilly</li>
-              <li>Brown, E. (2016). Learning javascript. O'Reilly.</li>
-            </ul>
-          </li>
-          <li>
-            Complementaria:
-            <ul>
-              <li>Schulz, R. G. (2009). Diseño web con CSS. Alfaomega.</li>
-              <li>
-                Firtman, M. (2012). JQuery mobile: Aplicaciones HTML5 para
-                móviles. Anaya Multimedia.
-              </li>
-              <li>
-                Muñoz Carmona, J. (2021). Despliegue de aplicaciones web.
-                Síntesis.
-              </li>
-              <li>
-                Freeman, E., Robson, E., Sierra, K., & Bates, B. (2004). Head
-                First design patterns: a Brain-Friendly Guide. O'Reilly
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Fechas de exámenes</h2>
-        <ul>
-          <li>Primer examen parcial: <b>29/04/2025</b></li>
-          <li>Segundo examen parcial: <b>24/06/2025</b></li>
-          <li>
-            Examen recuperatorio - Examen final anticipado: <b>08/07/2025</b>
-          </li>
-          <li>Examen final regular: <b>22/07/2025</b></li>
-        </ul>
-      </section>
-      <section>
-        <h2>UVA 1</h2>
-        <ul>
-          <li>
-            <a
-              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571984/View" target="_blank"
-              >Cuestionario - Múltiple choice: Conceptos generales</a
-            >
-          </li>
-          <li>
-            <a href="https://facusole.github.io/desarrollo-web-uade/about-me" target="_blank"
-              >Ejercicio individual: HTML - Introducción</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571989/View" target="_blank"
-              >Cuestionario - Múltiple choice: Arquitectura</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://virtualbsp.uade.edu.ar/d2l/le/content/43347/viewContent/571987/View" target="_blank"
-              >Ejercicio individual: HTML - Etiquetas
-            </a>
-          </li>
-        </ul>
-      </section>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Materia</th>
+            <th>Día</th>
+            <th>Horario</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Diseño y Desarrollo Web</td>
+            <td>Martes</td>
+            <td>18:30-20:30</td>
+          </tr>
+          <tr>
+            <td>Redes de Datos 1</td>
+            <td>Lunes</td>
+            <td>18:30-22:00</td>
+          </tr>
+          <tr>
+            <td>Paradigma Orientado a Objetos</td>
+            <td>Miércoles</td>
+            <td>18:30-22:00</td>
+          </tr>
+          <tr>
+            <td>Gestión de Personas en Organizaciones de Tecnología</td>
+            <td>Viernes</td>
+            <td>18:30-22:00</td>
+          </tr>
+        </tbody>
+      </table>
     </main>
   </body>
 </html>
