--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -6,6 +6,15 @@
     <title>Sobre mí - Facundo Solé</title>
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="avisos.html">Avisos</a></li>
+        <li><a href="sobre-mi.html">Sobre mi</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="materias-2025.html">Materias 2025</a></li>
+      </ul>
+    </header>
     <main>
       <h1>Facundo Solé</h1>
       <img src="assets/facundo-sole.webp" alt="Facundo Solé" />
