Ejercicio individual - Formato de caja

--- a/gimnasio.html
+++ b/gimnasio.html
@@ -34,7 +34,7 @@
         </p>
       </section>
 
-      <form action="#" method="post" class="registro-form">
+      <form class="registro-form">
         <fieldset id="datos-personales">
           <legend>Datos Personales</legend>
 
