--- a/stars-wars.html
+++ b/stars-wars.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Ejercicio de IDs y clases CSS</title>
+    <title>Diseño y Desarrollo Web - Facundo Solé</title>
+
     <link
       rel="stylesheet"
       href="ejercicio_clases_ids_css_starwars.css"
