--- a/chichilo.html
+++ b/chichilo.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cantina Chichilo de Buenos Aires</title>
+    <title>Diseño y Desarrollo Web - Facundo Solé</title>
+
     <meta
       name="keywords"
       content="cantina chichilo,restaurante en argentina,cantina en buenos aires,comida informal,fusiles,TIRAMISU,CARACOLES,RANAS,CORDERO PATAGONICO,BROCOLIS,ARROZ CON LECHE,MEJILLONES,MONDONGO,RABAS,GAMBAS,LENTEJAS"
