--- a/contacto.html
+++ b/contacto.html
@@ -4,24 +4,113 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diseño y Desarrollo Web - Facundo Solé</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style type="text/tailwindcss">
+      @layer utilities {
+        .no-scrollbar::-webkit-scrollbar {
+          display: none;
+        }
+        .no-scrollbar {
+          scrollbar-width: none;
+        }
+      }
+    </style>
   </head>
-  <body>
-    <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="avisos.html">Avisos</a></li>
-        <li><a href="sobre-mi.html">Sobre mi</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="materias-2025.html">Materias 2025</a></li>
-      </ul>
+  <body class="bg-[#070b0a] text-[#e9f1ef] overflow-x-hidden">
+    <header class="py-6 border-b-[1px] border-[#a9c7c0]">
+      <nav class="text-[#a9c7c0] overflow-x-auto w-full no-scrollbar">
+        <ul
+          class="flex items-center justify-center flex-nowrap whitespace-nowrap pb-2 [&>li>a]:px-4 [&>li>a]:hover:text-[#73cab6] min-w-max"
+        >
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="avisos.html">Avisos</a>
+          </li>
+          <li>
+            <a href="sobre-mi.html">Sobre mi</a>
+          </li>
+          <li class="underline underline-offset-4">
+            <a href="contacto.html">Contacto</a>
+          </li>
+          <li>
+            <a href="materias-2025.html">Materias 2025</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <main>
-      <h1>Contacto</h1>
-      <form>
-        <input type="text" placeholder="Nombre" />
-        <textarea name="detalle" placeholder="Contame tus dudas..."></textarea>
-        <button type="submit">Contactate conmigo!</button>
+    <main
+      class="grid gap-8 lg:gap-16 max-w-[1080px] min-h-full mx-auto px-4 py-12"
+    >
+      <h1 class="text-[#9c82ad] text-center text-3xl font-bold">Contacto</h1>
+      <form class="grid gap-6">
+        <div>
+          <label
+            for="nombre"
+            class="block mb-2 text-sm font-medium text-[#e9f1ef]"
+            >Nombre</label
+          >
+          <input
+            type="text"
+            id="nombre"
+            placeholder="Escribí tu nombre"
+            class="w-full p-3 rounded-md bg-[#070b0a] border border-[#a9c7c0] text-[#e9f1ef] placeholder-[#a9c7c0] focus:outline-none focus:ring-2 focus:ring-[#9c82ad]"
+          />
+        </div>
+        <div>
+          <label
+            for="email"
+            class="block mb-2 text-sm font-medium text-[#e9f1ef]"
+            >Correo electrónico</label
+          >
+          <input
+            type="email"
+            id="email"
+            placeholder="tucorreo@ejemplo.com"
+            class="w-full p-3 rounded-md bg-[#070b0a] border border-[#a9c7c0] text-[#e9f1ef] placeholder-[#a9c7c0] focus:outline-none focus:ring-2 focus:ring-[#9c82ad]"
+          />
+        </div>
+        <div>
+          <label
+            for="asunto"
+            class="block mb-2 text-sm font-medium text-[#e9f1ef]"
+            >Asunto</label
+          >
+          <input
+            type="text"
+            id="asunto"
+            placeholder="Motivo de tu mensaje"
+            class="w-full p-3 rounded-md bg-[#070b0a] border border-[#a9c7c0] text-[#e9f1ef] placeholder-[#a9c7c0] focus:outline-none focus:ring-2 focus:ring-[#9c82ad]"
+          />
+        </div>
+        <div>
+          <label
+            for="mensaje"
+            class="block mb-2 text-sm font-medium text-[#e9f1ef]"
+            >Mensaje</label
+          >
+          <textarea
+            id="mensaje"
+            rows="5"
+            placeholder="Escribí tu mensaje aquí..."
+            class="w-full p-3 rounded-md bg-[#070b0a] border border-[#a9c7c0] text-[#e9f1ef] placeholder-[#a9c7c0] focus:outline-none focus:ring-2 focus:ring-[#9c82ad]"
+          ></textarea>
+        </div>
+        <button
+          type="submit"
+          class="cursor-pointer px-6 py-3 rounded-md bg-[#9c82ad] text-[#070b0a] font-semibold hover:bg-[#b69ac8] transition-colors"
+        >
+          Enviar
+        </button>
       </form>
     </main>
+    <footer class="px-4 py-6 border-t-[1px] border-[#a9c7c0] max-h-[300px]">
+      <ul class="flex justify-center items-center gap-4 lg:gap-12 lg:text-2xl">
+        <li>Curso: 11842</li>
+        <li>Profesora: Patricia Litovicius</li>
+        <li>Alumno: Facundo Solé</li>
+      </ul>
+    </footer>
   </body>
 </html>
