--- a/gimnasio.html
+++ b/gimnasio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="gimnasio.css" />
-    <title>Gimnasio</title>
+    <title>Diseño y Desarrollo Web - Facundo Solé</title>
   </head>
   <body>
     <header>
