--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -4,68 +4,106 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre mí - Facundo Solé</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style type="text/tailwindcss">
+      @layer utilities {
+        .no-scrollbar::-webkit-scrollbar {
+          display: none;
+        }
+        .no-scrollbar {
+          scrollbar-width: none;
+        }
+      }
+    </style>
   </head>
-  <body>
-    <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="avisos.html">Avisos</a></li>
-        <li><a href="sobre-mi.html">Sobre mi</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="materias-2025.html">Materias 2025</a></li>
-      </ul>
+  <body class="bg-[#070b0a] text-[#e9f1ef] overflow-x-hidden">
+    <header class="py-6 border-b-[1px] border-[#a9c7c0]">
+      <nav class="text-[#a9c7c0] overflow-x-auto w-full no-scrollbar">
+        <ul
+          class="flex items-center justify-center flex-nowrap whitespace-nowrap pb-2 [&>li>a]:px-4 [&>li>a]:hover:text-[#73cab6] min-w-max"
+        >
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="avisos.html">Avisos</a>
+          </li>
+          <li class="underline underline-offset-4">
+            <a href="sobre-mi.html">Sobre mi</a>
+          </li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="materias-2025.html">Materias 2025</a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-      <h1>Facundo Solé</h1>
-      <img src="assets/facundo-sole.webp" alt="Facundo Solé" />
-      <p>
-        Soy desarrollador web, estudiante de la carrera de Licenciatura en
-        Gestión de Tecnologías de la Información. Antes de cambiar de industria,
-        fui estudiante de la carrera de Contador Público en UADE.
-      </p>
-      <p>
-        Disfruto de programar, esencialmente me interesa todo el ecosistema del
-        mundo Frontend. Actualmente estoy trabajando para una agencia de diseño
-        y desarrollo llamada
-        <a
-          href="https://www.androbin.co/es"
-          rel="noopener noreferrer"
-          target="_blank"
-          >Robin</a
-        >
-        como Desarrollador Frontend. Tengo conocimiento sobre varias
-        tecnologías, aquí una lista con algunas de ellas:
-      </p>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Frameworks CSS como ChakraUI, TailwindCSS</li>
-        <li>JavaScript/Typescript</li>
-        <li>React</li>
-        <li>Node.js</li>
-        <li>Express</li>
-        <li>MySQL</li>
-        <li>Git/GitHub</li>
-        <li>Figma</li>
-      </ul>
-      <p>
-        Siendo estudiante de la carrera de Contador Público, en 2020 me di
-        cuenta que no era lo que me apasionaba, por lo que luego de un largo
-        proceso de investigación, decidí comenzar a estudiar desarrollo web de
-        manera autodidacta. Luego, me di cuenta que me motivaba a seguir
-        aprendiendo, por lo que realicé la Diplomatura de Desarrollo Web
-        Fullstack en UADE. Una vez realizada, comencé a preparar mi CV y mi
-        <a
-          href="https://www.facundosole.com.ar/"
-          rel="noopener noreferrer"
-          target="_blank"
-          >portfolio web</a
-        >
-        para buscar mi primer trabajo. Al percatarme de la competencia dentro de
-        la industria, decidí que la mejor manera de destacar entre los demás y
-        afianzar mis conocimientos era estudiar la Licenciatura en Gestión de
-        Tecnologías de la Información
-      </p>
+    <main class="grid gap-8 lg:gap-16 w-full max-w-[1080px] mx-auto px-4 py-12">
+      <h1 class="text-[#9c82ad] text-center text-3xl font-bold">
+        Facundo Solé
+      </h1>
+      <section class="grid lg:grid-cols-2 gap-6 overflow-x-hidden">
+        <img
+          src="assets/facundo-sole.webp"
+          alt="Facundo Solé"
+          class="max-w-full"
+        />
+        <div>
+          <p>
+            Soy desarrollador web, estudiante de la carrera de Licenciatura en
+            Gestión de Tecnologías de la Información. Antes de cambiar de
+            industria, fui estudiante de la carrera de Contador Público en UADE.
+          </p>
+          <p>
+            Disfruto de programar, esencialmente me interesa todo el ecosistema
+            del mundo Frontend. Actualmente estoy trabajando para una agencia de
+            diseño y desarrollo llamada
+            <a
+              href="https://www.androbin.co/es"
+              rel="noopener noreferrer"
+              target="_blank"
+              >Robin</a
+            >
+            como Desarrollador Frontend. Tengo conocimiento sobre varias
+            tecnologías, aquí una lista con algunas de ellas:
+          </p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Frameworks CSS como ChakraUI, TailwindCSS</li>
+            <li>JavaScript/Typescript</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>MySQL</li>
+            <li>Git/GitHub</li>
+            <li>Figma</li>
+          </ul>
+          <p>
+            Siendo estudiante de la carrera de Contador Público, en 2020 me di
+            cuenta que no era lo que me apasionaba, por lo que luego de un largo
+            proceso de investigación, decidí comenzar a estudiar desarrollo web
+            de manera autodidacta. Luego, me di cuenta que me motivaba a seguir
+            aprendiendo, por lo que realicé la Diplomatura de Desarrollo Web
+            Fullstack en UADE. Una vez realizada, comencé a preparar mi CV y mi
+            <a
+              href="https://www.facundosole.com.ar/"
+              rel="noopener noreferrer"
+              target="_blank"
+              >portfolio web</a
+            >
+            para buscar mi primer trabajo. Al percatarme de la competencia
+            dentro de la industria, decidí que la mejor manera de destacar entre
+            los demás y afianzar mis conocimientos era estudiar la Licenciatura
+            en Gestión de Tecnologías de la Información
+          </p>
+        </div>
+      </section>
     </main>
+    <footer class="px-4 py-6 border-t-[1px] border-[#a9c7c0]">
+      <ul class="flex justify-center items-center gap-4 lg:gap-12 lg:text-2xl">
+        <li>Curso: 11842</li>
+        <li>Profesora: Patricia Litovicius</li>
+        <li>Alumno: Facundo Solé</li>
+      </ul>
+    </footer>
   </body>
 </html>
