Trabajo práctico Integrador UVA 2

--- a/stars-wars.html
+++ b/stars-wars.html
@@ -9,7 +9,7 @@
       href="ejercicio_clases_ids_css_starwars.css"
       type="text/css"
     />
-    <link rel="stylesheet" href="stars-wars.css" type="text/css" />
+    <link rel="stylesheet" href="css/stars-wars.css" type="text/css" />
   </head>
   <body>
     <h1>Los bandos de Star Wars</h1>
