--- a/gridflexbox.html
+++ b/gridflexbox.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="gridflexbox.css" />
+    <link rel="stylesheet" href="css/gridflexbox.css" />
     <title>Diseño y Desarrollo Web - Facundo Solé</title>
   </head>
   <body>
