Trabajo Practico Integrador UVA 2

--- a/materias-2025.html
+++ b/materias-2025.html
@@ -49,9 +49,10 @@
           Primer cuatrimestre
         </h2>
         <ul class="[&>li]:before:content-['📖']">
-          <li>
+          <li >
             <a
-              href="https://virtualbsp.uade.edu.ar/d2l/home/43347"
+            class="hover:text-[#9c82ad] hover:underline hover:underline-offset-4 transition-all"
+              href="/desarrollo-web.html"
               target="_blank"
               rel="noopener noreferrer"
               >Diseño y desarrollo web</a
