--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -46,7 +46,7 @@
           alt="Facundo Solé"
           class="max-w-full"
         />
-        <div>
+        <div class="grid gap-4">
           <p>
             Soy desarrollador web, estudiante de la carrera de Licenciatura en
             Gestión de Tecnologías de la Información. Antes de cambiar de
@@ -65,7 +65,7 @@
             como Desarrollador Frontend. Tengo conocimiento sobre varias
             tecnologías, aquí una lista con algunas de ellas:
           </p>
-          <ul>
+          <ul class="[&>li]:before:content-['💻'] [&>li]:before:mr-2">
             <li>HTML</li>
             <li>CSS</li>
             <li>Frameworks CSS como ChakraUI, TailwindCSS</li>
