Trabajo Practico Integrador UVA 2

--- a/desarrollo-web.html
+++ b/desarrollo-web.html
@@ -102,7 +102,7 @@
           >
             <li>
               <a
-                href="https://github.com/facusole/desarrollo-web-uade/tree/b08a34e50030d085b55b0e488a262e57c0d632bf"
+                href="https://facusole.github.io/desarrollo-web-uade/sobre-mi.html"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Ejercicio individual: HTML - Introducción
@@ -132,7 +132,7 @@
             </li>
             <li>
               <a
-                href="https://github.com/facusole/desarrollo-web-uade/tree/f4c9fff9dd43a44502fb4ad261cb94cfc3931d8d"
+                href="https://facusole.github.io/desarrollo-web-uade/"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Ejercicio individual: Ejercicio integrador</a
