--- a/desarrollo-web.html
+++ b/desarrollo-web.html
@@ -36,7 +36,7 @@
         </ul>
       </nav>
     </header>
-    <main class="grid gap-8 lg:gap-16 w-full max-w-[1080px] mx-auto px-4 py-12">
+    <main class="flex flex-col gap-8 lg:gap-16 w-full max-w-[1080px] mx-auto px-4 py-12">
       <h1 class="text-[#9c82ad] text-center text-3xl font-bold">
         Diseño y Desarrollo Web
       </h1>
