--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
       </nav>
     </header>
-    <main class="grid gap-8 lg:gap-16 w-full max-w-[1080px] min-h-[80dvh] mx-auto px-4 py-12">
+    <main class="flex flex-col gap-8 lg:gap-12 w-full max-w-[1080px] min-h-[80dvh] mx-auto px-4 py-12">
       <h1 class="text-[#9c82ad] text-center text-3xl font-bold">
         Home
       </h1>
