--- a/materias-2025.html
+++ b/materias-2025.html
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main
-      class="grid gap-8 lg:gap-4 max-w-[1080px] min-h-full mx-auto px-4 py-12"
+      class="flex flex-col gap-8 lg:gap-16 max-w-[1080px] min-h-full mx-auto px-4 py-12"
     >
       <h1 class="text-[#9c82ad] text-center text-3xl font-bold h-fit">
         Materias 2025
@@ -51,8 +51,8 @@
         <ul class="[&>li]:before:content-['📖']">
           <li >
             <a
-            class="hover:text-[#9c82ad] hover:underline hover:underline-offset-4 transition-all"
-              href="/desarrollo-web.html"
+            class="text-[#9c78ae] hover:text-[#9c82ad] hover:underline hover:underline-offset-4 transition-all"
+              href="desarrollo-web.html"
               target="_blank"
               rel="noopener noreferrer"
               >Diseño y desarrollo web</a
