agregar ejercicio dark mode

--- a/desarrollo-web.html
+++ b/desarrollo-web.html
@@ -220,6 +220,15 @@
             </li>
             <li>
               Ejercicio individual - <a href="https://facusole.github.io/desarrollo-web-uade/individual-js-aleatorio.html">parte 1</a> - <a href="https://facusole.github.io/desarrollo-web-uade/individual-js-usuario.html">parte 2</a> - <a href="https://facusole.github.io/desarrollo-web-uade/individual-js-dias.html">parte 3</a>
+              - <a
+                href="https://github.com/facusole/desarrollo-web-uade"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Github</a
+              >
+            </li>
+            <li>
+              <a href="https://facusole.github.io/desarrollo-web-uade/formulario-js.html">Ejercicio práctica formulario</a> - 
               <a
                 href="https://github.com/facusole/desarrollo-web-uade"
                 target="_blank"
@@ -228,16 +237,7 @@
               >
             </li>
             <li>
-              <a href="https://facusole.github.io/desarrollo-web-uade/formulario-js.html">Ejercicio práctica formulario</a>
-              <a
-                href="https://github.com/facusole/desarrollo-web-uade"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Github</a
-              >
-            </li>
-            <li>
-              <a href="https://facusole.github.io/desarrollo-web-uade/dark-mode.html">Ejercicio dark mode</a>
+              <a href="https://facusole.github.io/desarrollo-web-uade/dark-mode.html">Ejercicio dark mode</a> - 
               <a
                 href="https://github.com/facusole/desarrollo-web-uade"
                 target="_blank"
